--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="gallery">Gallery</string>
     <string name="map">Map</string>
     <string name="gallery_description">The photos from Flicker</string>
+    <string name="reload">Reload</string>
 </resources>
